2003-06-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/show.c (show_palette_rgbformulae show_palette_palette
	show_palette_colornames): Fixed indentation.

2003-06-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS src/show.c docs/gnuplot.doc: New command 'show palette
	fit2rgbformulae'.

2003-05-23  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/gplt_x11.c (main) [!DEBUG]: Redirect stderr to /dev/null on
 	entry to -persist mode event loop.  Avoids hanging emacs if you
 	run "gnuplot -persist" via shell-command.  In DEBUG mode, leave it
 	alone.

2003-05-19  Ethan Merritt <merritt@u.washington.edu>

	* term/svg.trm: Make pattern fill sequence consistent with other
 	terminal types. Fix off-by-one y coordinate error in box fill
 	code.

2003-05-19  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/show.c (show_palette_colornames): Fix a C++-ism (variable
 	declarations not at the beginning of a block).

2003-05-17  James R. Van Zandt  <jrv@debian.org>

	* term/README: spelling and grammar fixes

2003-05-17  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/svg.trm: Support filled polygons with more than 4 corners.

2003-05-17  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/show.c show_palette_colornames(): Command 'show palette
	colornames': print color names and their rgb values (was printing
	only names).

2003-05-16  Ethan Merritt <merritt@u.washington.edu>

	* src/gadgets.h src/graph3d.c src/graphics.c src/save.c src/set.c
	src/show.c src/tables.c src/tables.h src/unset.c docs/gnuplot.doc:
	Add new command options 'set key {on|off|default}'.
	Using 'set key' to restore default values is deprecated.

2003-05-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.mgw config/makefile.cyg: New configuration define
	GNUSORT.

2003-05-13  Ethan Merritt <merritt@u.washington.edu>

	* src/plot2d.c docs/gnuplot.doc: Apply current fill style to boxes 
	drawn for 'plot with boxxyerror'.
